test/parser/process/021.stderr
At: "021.hac":8:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(process-prototype) [4:1..16]
#STATE#	{ [4:18]
#STATE#	end-of-file
in state #STATE#, possible rules are:
	defproc : declare_proc_proto '{' . optional_definition_body '}'  (#RULE#)
	optional_export : .  (#RULE#)
	optional_definition_body : .  (#RULE#)
acceptable tokens are: 
	'!' (shift)
	'(' (shift)
	'-' (shift)
	'[' (shift)
	'{' (shift)
	'}' (reduce)
	'~' (shift)
	ID (shift)
	FLOAT (shift)
	INT (shift)
	STRING (shift)
	SCOPE (shift)
	CHP_LANG (shift)
	HSE_LANG (shift)
	PRS_LANG (shift)
	SPEC_LANG (shift)
	TYPEDEF (reduce)
	CHANNEL (shift)
	TEMPLATE (reduce)
	EXPORT (shift)
	BOOL_TRUE (shift)
	BOOL_FALSE (shift)
	INT_TYPE (shift)
	BOOL_TYPE (shift)
	PINT_TYPE (shift)
	PBOOL_TYPE (shift)
	PREAL_TYPE (shift)
